# Airflow

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: dag.py
plugins/: .gitkeep
