[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi==1.10.10",
    "aiosmtplib==5.0.0",
    "aiosqlite==0.21.0",
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "apache-airflow==3.1.6",
    "apache-airflow-core==3.1.6",
    "apache-airflow-providers-common-compat==1.10.0",
    "apache-airflow-providers-common-io==1.7.0",
    "apache-airflow-providers-common-sql==1.30.0",
    "apache-airflow-providers-smtp==2.4.0",
    "apache-airflow-providers-standard==1.10.0",
    "apache-airflow-task-sdk==1.1.5",
]
