[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.6",
    "apache-airflow-providers-celery>=3.15.0",
    "apache-airflow-providers-fab>=3.1.1",
    "asyncpg>=0.31.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=1.4.54",
]
